Google AdSense 승인용 예제

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,12 @@
 <!-- start custom head snippets -->
 
-<!-- insert favicons. use https://realfavicongenerator.net/ -->
+<!-- following is for AdSense -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-5218184138518164",
+          enable_page_level_ads: true
+     });
+</script>
 
 <!-- end custom head snippets -->
