--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -12,9 +12,11 @@ $doc-font-size: 16 !default;
 $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
+// "Noto+Sans+KR", "Nanum Gothic"
+
 /* system typefaces */
 $serif: Georgia, Times, serif !default;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Noto+Sans+KR", "Nanum Gothic", "Malgun Gothic", "Roboto", "Segoe UI",
+$sans-serif: -apple-system, BlinkMacSystemFont, "Malgun Gothic", "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
