--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,8 +1,8 @@
 <!-- start custom footer snippets -->
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- sys09270883.github.io -->
-<ins class="adsbygoogle"
+<!-- <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5004953701825085"
      data-ad-slot="9497233768"
@@ -10,6 +10,8 @@
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
+
+<!-- 구글 광고 사용 안함 -->
 
 <!-- end custom footer snippets -->
