--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -31,9 +31,9 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: $sans-serif !default;
-$header-font-family: $sans-serif !default;
-$caption-font-family: $serif !default;
+$global-font-family: "Nanum Gothic", $sans-serif !default;
+$header-font-family: "Nanum Gothic", $sans-serif !default;
+$caption-font-family: "Nanum Gothic", $serif !default;
 
 /* type scale */
 $type-size-1: 2.441em !default; // ~39.056px
