--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,6 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-<script data-ad-client="ca-pub-5004953701825085" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script data-ad-client="ca-pub-5004953701825085" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 <!-- end custom head snippets -->
