사이드바 광고 제거

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -45,7 +45,8 @@ layout: default
             <!-- devinlife comment : right-sidebar ads -->
             <nav class="toc-custom">
               {% if page.toc_ads %}
-                {% include GoogleAdSenseSidbar.html %}
+                <!-- 사이드바 광고 사용 안함 -->
+                <!-- {% include GoogleAdSenseSidbar.html %} -->
               {% endif %}
             </nav>
           </aside>
