--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -25,7 +25,8 @@ layout: default
     {% if page.toc_ads %}
       <aside class="sidebar__right sticky">
         <nav class="toc-custom">
-          {% include GoogleAdSenseSidbar.html %}
+          <!-- 사이드바에 구글 광고 사용 안함 -->
+          <!-- {% include GoogleAdSenseSidbar.html %} -->
         </nav>
       </aside>
     {% endif %}
